feat: generate and set cookies on registration
